--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,6 +7,12 @@
   align-items: center;
 }
 
+.footer {
+  color: #ffffff;
+  font-family: "Helvetica Neue";
+  font-size: 1.5rem;
+}
+
 @media screen and (max-width: 820px) {
   .footer-links {
     padding-top: 2rem;
