--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,38 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap");
 .footer-container {
   background-color: #242424;
   padding: 4rem 0 2rem 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
+span,
+i {
+  color: rgb(163, 163, 245);
+}
+ul {
+  list-style: none;
+}
+
+li {
+  padding: 0.5rem 0.5rem;
+}
 .footer {
   color: #ffffff;
-  font-family: "Helvetica Neue";
   font-size: 1.5rem;
 }
 
 @media screen and (max-width: 820px) {
-  .footer-links {
-    padding-top: 2rem;
-  }
-
-  .footer-input {
-    width: 100%;
-  }
-
-  .btn {
-    width: 100%;
-  }
-
-  .footer-link-wrapper {
-    flex-direction: column;
-  }
-
-  .social-media-wrap {
-    flex-direction: column;
-  }
 }
 
 @media screen and (max-width: 768px) {
